# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import pricesRouter from "./prices";
 import vouchersRouter from "./vouchers";
 import analyticsRouter from "./analytics";
 import adminRouter from "./admin";
+import paymentsRouter from "./payments";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use("/prices", pricesRouter);
 router.use("/vouchers", vouchersRouter);
 router.use("/analytics", analyticsRouter);
 router.use("/admin", adminRouter);
+router.use("/payments", paymentsRouter);
 
 export default router;
